changed getLast and getFirst methods on simplier versions to better suit older versions of java